mod wmplus-kwin/contents/code/main.js & wmplus-kwin/metadata.desktop

--- a/wmplus-kwin/metadata.desktop
+++ b/wmplus-kwin/metadata.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
-Name=kwin-wmplus
-Comment=kwin-wmplus
+Name=wmplus-kwin
+Comment=wmplus-kwin
 
 X-Plasma-API=javascript
 X-Plasma-MainScript=code/main.js
 
 X-KDE-PluginInfo-Author=belldandy-syaorin
 X-KDE-PluginInfo-Email=n/a
-X-KDE-PluginInfo-Name=kwin-wmplus
+X-KDE-PluginInfo-Name=wmplus-kwin
 X-KDE-PluginInfo-Version=n/a
 X-KWin-Exclude-Listing=false
 
