--- a/javascript/wmplus-kwin/metadata.desktop
+++ b/javascript/wmplus-kwin/metadata.desktop
@@ -1,19 +1,20 @@
 [Desktop Entry]
 Name=wmplus-kwin
 Comment=wmplus-kwin
+Icon=
+Type=
 
 X-Plasma-API=javascript
 X-Plasma-MainScript=code/main.js
+X-Plasma-DefaultSize=
 
+X-KDE-ServiceTypes=
 X-KDE-PluginInfo-Author=belldandy-syaorin
-X-KDE-PluginInfo-Email=n/a
+X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-Name=wmplus-kwin
-X-KDE-PluginInfo-Version=n/a
-X-KWin-Exclude-Listing=false
-
+X-KDE-PluginInfo-Version=
+X-KDE-PluginInfo-Website=
+X-KDE-PluginInfo-Category=
+X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=true
-
-X-KDE-PluginInfo-Depends=
-X-KDE-ServiceTypes=KWin/Script
-Type=Service
