--- a/linux/wmplus-kwin/metadata.desktop
+++ b/linux/wmplus-kwin/metadata.desktop
@@ -1,18 +1,15 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=wmplus-kwin
 Comment=wmplus-kwin
-Type=
+Icon=
 
-X-KDE-Library=
-X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=belldandy-syaorin
 X-KDE-PluginInfo-Email=
-X-KDE-PluginInfo-License=
 X-KDE-PluginInfo-Name=wmplus-kwin
 X-KDE-PluginInfo-Version=
-X-KDE-PluginInfo-Website=
-X-KDE-ServiceTypes=
+X-KDE-PluginInfo-License=
+
+Type=Service
+X-KDE-ServiceTypes=KWin/Script
 X-Plasma-API=javascript
 X-Plasma-MainScript=code/main.js
-X-KDE-PluginInfo-Category=
